--- a/client/index.html
+++ b/client/index.html
@@ -10,14 +10,13 @@
     <title>Big Beards for a Baby</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
+    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-    <!-- build:css(client) app/vendor.css -->
-      <!-- bower:css -->
-      <!-- endbower -->
-    <!-- endbuild -->
+    <!--<link rel="stylesheet" href="bower_components/animate.css/animate.css">-->
     <!-- build:css({.tmp,client}) app/app.css -->
     <link rel="stylesheet" href="app/app.css">
       <!-- injector:css -->
+      <link rel="stylesheet" href="app/app.css">
       <!-- endinjector -->
     <!-- endbuild -->
   </head>
@@ -28,10 +27,12 @@
 
     <div ng-include="'components/navbar/navbar.html'"></div>
     <!-- Add your site or application content here -->
-    <div ng-view=""></div>
+    <div id="main" class="container">
+      <div id="view" ng-view=""></div>
+    </div>
     <footer class="footer">
       <div class="container">
-          <p><span class="glyphicon glyphicon-heart"></span> THANK you so much in advance for you support in our adoption journey!</p>
+          <p class="text-muted text center"><span class="glyphicon glyphicon-heart"></span> THANK you so much in advance for you support in our adoption journey!</p>
       </div>
     </footer>
 
@@ -59,7 +60,7 @@
       <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
       <script src="bower_components/angular-route/angular-route.js"></script>
       <script src="bower_components/lodash/dist/lodash.compat.js"></script>
-      <script src="bower_components/bootstrap-ui/dist/ui-bootstrap-0.11.0.js"></script>
+      <script src="bower_components/angular-animate/angular-animate.js"></script>
       <script src="bower_components/bootstrap-ui/dist/ui-bootstrap-tpls-0.11.0.js"></script>
       <!-- endbower -->
     <!-- endbuild -->
@@ -76,13 +77,13 @@
           <script src="app/beardgrowers/beardgrowers.controller.js"></script>
           <script src="app/becomeagrower/becomeagrower.controller.js"></script>
           <script src="app/main/main.controller.js"></script>
-          <script src="app/main/main.js"></script>
           <script src="app/ourstory/ourstory.controller.js"></script>
           <script src="app/support/support.controller.js"></script>
           <script src="components/auth/auth.service.js"></script>
           <script src="components/auth/user.service.js"></script>
           <script src="components/mongoose-error/mongoose-error.directive.js"></script>
           <script src="components/navbar/navbar.controller.js"></script>
+          <script src="components/directives/ng-match.js"></script>
           <!-- endinjector -->
         <!-- endbuild -->
 </body>
