--- a/client/app/ourstory/ourstory.html
+++ b/client/app/ourstory/ourstory.html
@@ -1,6 +1,7 @@
 <div class="container">
+  <img alt="The Barker Family" src="/assets/images/barker-family.jpg"></img>
+  
   <h1>Our Story</h1>
-
   <p>
     <strong>Contact Us At:</strong>&nbsp;<a href="mailto:bigbeardsforababy@gmail.com">bigbeardsforababy@gmail.com</a>
   </p>
@@ -37,7 +38,7 @@
     I will be updating my blog with our progress and upcoming fundraisers. Please feel free to email me or contact me if you have questions and or ideas.
   </p>
 
-  Read More about our Adoption Story: <a href="http://inwhomidelight.blogspot.com/search/label/adoption" tatrget="_blank">Barker Adoption</a>
+  Read More about our Adoption Story: <a href="http://inwhomidelight.blogspot.com/search/label/adoption" target="_blank">Barker Adoption</a>
 
   <h4>thanks friends!</h4>
 </div>
