Added countdown timer to main page.

--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -1,18 +1,19 @@
 <div class="container">
     <div class="row">
         <div class="col-sm-8">
+            <h1>Big Beards for a Baby</h1>
             <p class="lead">Help our family's adoption by supporting a beard grower or becoming a beard grower yourself!</p>
         </div>
         <div class="col-sm-4">
-            <h3>Top Beard Growers</h3>
-            <carousel interval="5000">
-            <slide ng-repeat="slide in slides" active="slide.active">
-              <img class="img-responsive" ng-src="{{slide.image}}" style="margin:auto;">
-            </slide>
-          </carousel>
-        <p><hr /></p>
-        <a class="twitter-timeline" href="https://twitter.com/beardsforababy" data-widget-id="515515623615365120">Tweets by @beardsforababy</a>
-            <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+            <div>
+                <h3>Commence Growing In:</h3>
+                <h4><timer end-time="1414814400000">{{days}} days, {{hours}} hours, {{minutes}} minutes, {{seconds}} seconds.</timer></h4>
+            </div>
+            <hr />
+            <iframe src="http://snapwidget.com/sc/?u=bGFjZWRhcnJvd3xpbnwzMDB8M3wzfHx5ZXN8MjB8bm9uZXxvblN0YXJ0fHllc3xubw==&ve=260914" title="Instagram Widget" class="snapwidget-widget" allowTransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:100%; height:300px"></iframe>
+            <p></p>
+            <a class="twitter-timeline" href="https://twitter.com/beardsforababy" data-widget-id="515515623615365120">Tweets by @beardsforababy</a>
+                <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
         </div>
     </div>
 </div>
