--- a/client/app/ourstory/ourstory.html
+++ b/client/app/ourstory/ourstory.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <img alt="The Barker Family" src="/assets/images/barker-family.jpg"></img>
+  <img class="img-responsive" style="margin:auto;" alt="The Barker Family" src="/assets/images/barker-family.jpg"></img>
   
   <h1>Our Story</h1>
   <p>
