--- a/client/app/support/support.html
+++ b/client/app/support/support.html
@@ -1,3 +1,6 @@
 <div class="container">
   <h1>Support</h1>
+  
+  <p><a href="#">Purchase Merchandise</a></p>
+  <p><a href="#">Support a Grower</a></p>
 </div>
