Added growers api endpoint, now fetching list on beardgrowers page.

--- a/client/app/beardgrowers/beardgrowers.html
+++ b/client/app/beardgrowers/beardgrowers.html
@@ -1,3 +1,8 @@
 <div class="container">
   <h1>Beard Growers</h1>
+  <div class="row" ng-repeat="grower in growers">
+    <div class="col-sm-4">
+      {{ grower.name }} 
+    </div>
+  </div>
 </div>
