--- a/client/index.html
+++ b/client/index.html
@@ -12,7 +12,7 @@
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-    <!--<link rel="stylesheet" href="bower_components/animate.css/animate.css">-->
+    <link rel="stylesheet" href="bower_components/animate.css/animate.css">
     <!-- build:css({.tmp,client}) app/app.css -->
 
       <!-- injector:css -->
