--- a/client/index.html
+++ b/client/index.html
@@ -64,6 +64,7 @@
       <script src="bower_components/angular-animate/angular-animate.js"></script>
       <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
       <script src="bower_components/angular-timer/dist/angular-timer.js"></script>
+      <script src="bower_components/ng-file-upload/angular-file-upload.js"></script>
       <!-- endbower -->
     <!-- endbuild -->
 
