--- a/client/app/account/settings/settings.html
+++ b/client/app/account/settings/settings.html
@@ -1,4 +1,17 @@
 <div class="container">
+  
+  <!-- Upload Profile Picture -->
+  <div class="row">
+    <div class="col-sm-12">
+      <h1>Profile Picture</h1> 
+    </div>
+    <div class="col-sm-6">
+      Upload Profile Picture
+      <input type="file" ng-file-select="onFileSelect($files)" onclick="this.value=null" accept="image/*">
+    </div>
+  </div>
+  
+  <!-- Change Password -->
   <div class="row">
     <div class="col-sm-12">
       <h1>Change Password</h1>
