--- a/client/app/beardgrowers/beardgrowers.html
+++ b/client/app/beardgrowers/beardgrowers.html
@@ -1,8 +1,18 @@
 <div class="container">
-  <h1>Beard Growers</h1>
-  <div class="row" ng-repeat="grower in growers">
+  <p style="margin-bottom: 20px">
+    <span class="h1">Our Beard Growers</span><br />
+    <span class="h3"><small>Give them a highfive when you see them!</small></span>
+  </p>
+  <div class="row top-buffer" ng-repeat="grower in growers">
     <div class="col-sm-4">
-      {{ grower.name }} 
+      <img ng-show="grower.picture" class="img-responsive img-rounded profile-picture" ng-src="/assets/images/growers/{{ grower.picture}}" />
+      <span ng-hide="grower.picture">
+        <span class="glyphicon glyphicon-user"></span>
+      </span>
+    </div>
+    <div class="col-sm-4">
+      <span class="h2">{{ grower.name }}</span>
+      <p>{{ grower.location }}</p><a href="#" class="btn btn-success"><span class="glyphicon glyphicon-thumbs-up"></span>&nbsp;Support</a>
     </div>
   </div>
 </div>
