--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -12,7 +12,7 @@
             
             <!-- Instagram Feed -->
             <div ng-show="instagram" class="slide-in">
-                <iframe src="http://snapwidget.com/sc/?u=bGFjZWRhcnJvd3xpbnwzMDB8M3wzfHx5ZXN8MjB8bm9uZXxvblN0YXJ0fHllc3xubw==&ve=260914" title="Instagram Widget" class="slide-in" ng-show="instagram" allowTransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:100%; height:300px"></iframe>
+                <iframe src="http://snapwidget.com/sc/?h=YmlnYmVhcmRzZm9yYWJhYnl8aW58MzAwfDN8M3x8bm98NXxub25lfG9uU3RhcnR8eWVzfG5v&ve=041014" title="Instagram Widget" class="snapwidget-widget" allowTransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:100%; height:300px"></iframe>
             </div>
             
             <!-- Twitter Feed -->
