--- a/client/index.html
+++ b/client/index.html
@@ -32,7 +32,7 @@
     </div>
     <footer class="footer">
       <div class="container">
-          <p class="text-muted text center"><span class="glyphicon glyphicon-heart"></span> THANK you so much in advance for you support in our adoption journey!</p>
+          <p class="text-muted text center"><span class="glyphicon glyphicon-heart"></span> THANK you so much in advance for your support in our adoption journey!</p>
       </div>
     </footer>
 
