--- a/client/app/beardgrowers/beardgrowers.html
+++ b/client/app/beardgrowers/beardgrowers.html
@@ -6,14 +6,29 @@
   </p>
   <div class="row top-buffer grower-anim" ng-repeat="grower in growers">
     <div class="col-sm-6 col-xs-12">
-      <img ng-show="grower.picture" class="img-responsive img-rounded profile-picture pull-right" ng-src="/assets/images/growers/{{ grower.picture}}" />
+      <img ng-if="grower.picture" class="img-responsive img-rounded profile-picture pull-right" ng-src="/assets/images/growers/{{ grower.picture}}" />
       <span ng-hide="grower.picture" class="profile-picture-absent">
         <span class="glyphicon glyphicon-user pull-right"></span>
       </span>
     </div>
     <div class="col-sm-6 col-xs-12">
       <span class="h2">{{ grower.name }}</span>
-      <p>{{ grower.location }}</p><a href="#" class="btn btn-success"><span class="glyphicon glyphicon-thumbs-up"></span>&nbsp;Support</a>
+      <p>{{ grower.city + ',&nbsp'}}{{ grower.state}}</p>
+      <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+        <input type="hidden" name="cmd" value="_xclick">
+        <input type="hidden" name="business" value="KWQM85LPRDEA8">
+        <input type="hidden" name="lc" value="US">
+        <input type="hidden" name="item_name" value="Supper A Grower">
+        <input type="hidden" name="button_subtype" value="services">
+        <input type="hidden" name="currency_code" value="USD">
+        <input type="hidden" name="bn" value="PP-BuyNowBF:btn_buynowCC_LG.gif:NonHosted">
+        <table>
+        <tr><td><input type="hidden" name="on0" value="Grower:"></td></tr><tr><td><input type="hidden" name="os0" maxlength="200" value="{{ grower.name }}"></td></tr>
+        </table>
+        <input type="submit" value="{{ 'Support ' + grower.name +'\'s beard!'}}" class="btn btn-success" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+      </form>
+      <p style="margin-top:15px">{{ grower.mungedBio }}</p>
+
     </div>
   </div>
 </div>
