--- a/client/index.html
+++ b/client/index.html
@@ -11,12 +11,13 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap-theme.css">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <link rel="stylesheet" href="bower_components/animate.css/animate.css">
     <!-- build:css({.tmp,client}) app/app.css -->
 
       <!-- injector:css -->
-      <link rel="stylesheet" href="app/app.css">
+      <link rel="stylesheet" href="app/main.css">
       <!-- endinjector -->
     <!-- endbuild -->
   </head>
