Added new support buttons to page.

--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -31,7 +31,7 @@
                     <li>Pray with us for our baby.</li>
                     <li>Follow us on twitter <a href="https://twitter.com/beardsforababy" target="_blank">@beardsforababy</a> and instagram <a href="http://instagram.com/bigbeardsforababy" target="_blank">@bigbeardsforababy</a></li>
                 </ol>
-                -The Barker Family
+                <strong>- The Barker Family</strong>
             </p>
         </div>
         <div class="col-sm-4">
