--- a/client/app/support/support.html
+++ b/client/app/support/support.html
@@ -1,6 +1,13 @@
 <div class="container">
   <h1>Support</h1>
   
-  <p><a href="#">Purchase Merchandise</a></p>
-  <p><a href="#">Support a Grower</a></p>
+  <p>
+    We encourage people who want to give to <a href="" ng-click="goto('/beardgrowers')">Support a Grower</a>, but if you can decide between our wonderful contestants, you can always donate directly to our fund!
+  </p>
+  <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+    <input type="hidden" name="cmd" value="_s-xclick">
+    <input type="hidden" name="hosted_button_id" value="D2ES8S97EP3FS">
+    <input type="submit" value="Directly Support Big Beards for a Baby" class="btn btn-success" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+  </form>
+
 </div>
