Added Flyer and logo download links to support page.

--- a/client/app/support/support.html
+++ b/client/app/support/support.html
@@ -1,6 +1,8 @@
 <div class="container">
   <h1>Support</h1>
+  <hr />
   
+  <h3>Donate</h3>
   <p>
     We encourage people who want to give to <a href="" ng-click="goto('/beardgrowers')">Support a Grower</a>, but if you can decide between our wonderful contestants, you can always donate directly to our fund!
   </p>
@@ -9,5 +11,18 @@
     <input type="hidden" name="hosted_button_id" value="D2ES8S97EP3FS">
     <input type="submit" value="Directly Support Big Beards for a Baby" class="btn btn-success" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
   </form>
+  
+  <h3>Spread The Word</h3>
+  <p>Looking to tell your friends about Big Beards for a Baby? Here are some resources to help get you started!</p>
+  <p class="top-buffer">
+    <h4>Logos:</h4>
+    <a href="/assets/images/logo-lg.png" class="btn btn-primary" target="_blank" download="logo-lg.png">Download Large Logo</a>
+    <a href="/assets/images/logo-sm.png" class="btn btn-primary" target="_blank" download="logo-sm.png">Download Medium Logo</a>
+    <a href="/assets/images/logo-xs.png" class="btn btn-primary" target="_blank" download="logo-xs.png">Download Small Logo</a>
+  </p>
+  <p class="top-buffer">
+    <h4>Flyer:</h4>
+    <a href="/assets/pdfs/bbfab-flyer.pdf" class="btn btn-primary" target="_blank" download="bbfab-flyer.pdf">Download Flyer</a>
+  </p>
 
 </div>
