Created thankyou page. minor other changes.

--- a/client/app/support/support.html
+++ b/client/app/support/support.html
@@ -4,7 +4,7 @@
   
   <h3>Donate</h3>
   <p>
-    We encourage people who want to give to <a href="" ng-click="goto('/beardgrowers')">Support a Grower</a>, but if you can decide between our wonderful contestants, you can always donate directly to our fund!
+    We encourage people who want to give to <a href="" ng-click="goto('/beardgrowers')">Support a Grower</a>, but if you can't decide between our wonderful contestants, you can always donate directly to our fund!
   </p>
   <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
     <input type="hidden" name="cmd" value="_s-xclick">
@@ -17,8 +17,8 @@
   <p class="top-buffer">
     <h4>Logos:</h4>
     <a href="/assets/images/logo-lg.png" class="btn btn-primary" target="_blank" download="logo-lg.png">Download Large Logo</a>
-    <a href="/assets/images/logo-sm.png" class="btn btn-primary" target="_blank" download="logo-sm.png">Download Medium Logo</a>
-    <a href="/assets/images/logo-xs.png" class="btn btn-primary" target="_blank" download="logo-xs.png">Download Small Logo</a>
+    <a href="/assets/images/logo-md.png" class="btn btn-primary" target="_blank" download="logo-md.png">Download Medium Logo</a>
+    <a href="/assets/images/logo-sm.png" class="btn btn-primary" target="_blank" download="logo-sm.png">Download Small Logo</a>
   </p>
   <p class="top-buffer">
     <h4>Flyer:</h4>
