--- a/client/index.html
+++ b/client/index.html
@@ -82,6 +82,7 @@
           <script src="app/becomeagrower/becomeagrower.controller.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/ourstory/ourstory.controller.js"></script>
+          <script src="app/ourstory/support/support.controller.js"></script>
           <script src="app/support/support.controller.js"></script>
           <script src="components/auth/auth.service.js"></script>
           <script src="components/auth/user.service.js"></script>
