--- a/client/app/ourstory/ourstory.html
+++ b/client/app/ourstory/ourstory.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <img class="img-responsive" style="margin:auto;" alt="The Barker Family" src="/assets/images/barker-family.jpg"></img>
+  <img class="img-responsive img-rounded" style="margin:auto;" alt="The Barker Family" src="/assets/images/barker-family.jpg"></img>
   
   <h1>Our Story</h1>
   <p>
@@ -27,7 +27,7 @@
   </p>
 
   <p>
-    We started the process with Bethany Christian Services, here in Grand Rapids, but after the formal application was approved and the classes began, Tim and I both felt uneasy and weren’t on the same page. That was the last thing I wanted, to not be in it together. So we called them and let them know that we were no longer going to be needing their services and appreciated their invested time in us. After lots of prayer and advice from other families we started do more research on agencies. We ended up finding an agency that seemed to fit us perfectly, the agency is called AIAA (Americans for International Aid & Adoption). They were recommended to us from another agency I had contacted. I quickly called them and knew immediately that this would be the agency we would go with.  I had Tim call them with another list of questions and it almost seemed unreal how it lined up with everything we were hoping for. Tim was excited. I was excited. We couldn’t wait to get things started. We are now OFFICIALLY adopting from SOUTH KOREA.
+    We started the process with Bethany Christian Services, here in Grand Rapids, but after the formal application was approved and the classes began, Tim and I both felt uneasy and weren’t on the same page. That was the last thing I wanted, to not be in it together. So we called them and let them know that we were no longer going to be needing their services and appreciated their invested time in us. After lots of prayer and advice from other families we started to do more research on agencies. We ended up finding an agency that seemed to fit us perfectly, the agency is called AIAA (Americans for International Aid & Adoption). They were recommended to us from another agency I had contacted. I quickly called them and knew immediately that this would be the agency we would go with.  I had Tim call them with another list of questions and it almost seemed unreal how it lined up with everything we were hoping for. Tim was excited. I was excited. We couldn’t wait to get things started. We are now OFFICIALLY adopting from SOUTH KOREA.
   </p>
 
   <p>
