--- a/client/index.html
+++ b/client/index.html
@@ -84,6 +84,7 @@
           <script src="app/ourstory/ourstory.controller.js"></script>
           <script src="app/ourstory/support/support.controller.js"></script>
           <script src="app/support/support.controller.js"></script>
+          <script src="app/thankyou/thankyou.controller.js"></script>
           <script src="components/auth/auth.service.js"></script>
           <script src="components/auth/user.service.js"></script>
           <script src="components/directives/ng-match.js"></script>
