--- a/client/app/beardgrowers/beardgrowers.html
+++ b/client/app/beardgrowers/beardgrowers.html
@@ -14,7 +14,7 @@
     <div class="col-sm-6 col-xs-12">
       <span class="h2">{{ grower.name }}</span>
       <p>{{ grower.city + ',&nbsp'}}{{ grower.state}}</p>
-      <p>Raised: <strong>{{ grower.raised || '$0' }}</strong></p>
+      <p>Raised: <strong>{{ grower.raised || '$0' | currency }}</strong></p>
       <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
         <input type="hidden" name="cmd" value="_donations">
         <input type="hidden" name="business" value="KWQM85LPRDEA8">
